--- a/pawpers-angular/src/app/app.component.html
+++ b/pawpers-angular/src/app/app.component.html
@@ -304,6 +304,8 @@
 
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
+  <app-auth-button></app-auth-button>
+  <app-user-profile></app-user-profile>
   <img
     width="40"
     alt="Angular Logo"
