final branch changes

--- a/pawpers-angular/src/app/front-page/front-page.component.html
+++ b/pawpers-angular/src/app/front-page/front-page.component.html
@@ -1,4 +1,4 @@
-<p>front-page works!</p>
+<p>front-page works</p>
 <div class="center">
     <h1 class="display-1">Pawpers</h1>
     <h6>Welcome to the quick and easy way for rescue dog adoptions!</h6>
