Added basic components and routing

--- a/pawpers-angular/src/app/front-page/front-page.component.html
+++ b/pawpers-angular/src/app/front-page/front-page.component.html
@@ -6,4 +6,9 @@
 
 <div class="indent">
     <a  [title]="'profile details'" [routerLink]="['/profile-page']">Profile Page</a>
+    <br>
+    <br>
+    <a  [title]="'topics details'" [routerLink]="['/topic-page']">Topics Page</a>
+    <br>
+    <br>
 </div>
