--- a/pawpers-angular/src/app/app.component.html
+++ b/pawpers-angular/src/app/app.component.html
@@ -1,2 +1,4 @@
 <router-outlet></router-outlet>
-<app-auth-button></app-auth-button>
+<div class="center">
+    <app-auth-button></app-auth-button>
+</div>
