--- a/pawpers-angular/src/app/app.component.html
+++ b/pawpers-angular/src/app/app.component.html
@@ -1,4 +1,4 @@
+<app-navbar></app-navbar>
+
 <router-outlet></router-outlet>
-<div class="center">
-    <app-auth-button></app-auth-button>
-</div>
+
