--- a/pawpers-angular/src/app/app.component.html
+++ b/pawpers-angular/src/app/app.component.html
@@ -1,4 +1,5 @@
 <router-outlet></router-outlet>
 <div class="center">
     <app-auth-button></app-auth-button>
+    <app-dog-search></app-dog-search>
 </div>
