--- a/pawpers-angular/src/app/front-page/front-page.component.css
+++ b/pawpers-angular/src/app/front-page/front-page.component.css
@@ -1,8 +1,27 @@
+.text{
+    text-align:center;
+    padding: 70px 0;
+}
+
+
+
 .center {
-    text-align: center;
+   
+    
+    background-image:url(https://images.pexels.com/photos/406014/pexels-photo-406014.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    
+    
 }
 
 .indent{
     padding-top: 50px;
     padding-left: 80px;
+}
+
+.box{
+    background-image:url(https://images.pexels.com/photos/406014/pexels-photo-406014.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+    padding: 150px;
+    margin: 150px;
 }
