--- a/pawpers-angular/src/app/front-page/front-page.component.html
+++ b/pawpers-angular/src/app/front-page/front-page.component.html
@@ -1,14 +1,10 @@
-<p>front-page works</p>
-<div class="center">
+
+<div class="text">
     <h1 class="display-1">Pawpers</h1>
     <h6>Welcome to the quick and easy way for rescue dog adoptions!</h6>
 </div>
 
-<div class="indent">
-    <a  [title]="'profile details'" [routerLink]="['/profile-page']">Profile Page</a>
-    <br>
-    <br>
-    <a  [title]="'topics details'" [routerLink]="['/topic-page']">Topics Page</a>
-    <br>
-    <br>
+<div class="center" style="height: 800px; padding-bottom: 150px;">
+
 </div>
+
