progress on adding a topic

--- a/pawpers-angular/src/app/topic-page/topic-page.component.html
+++ b/pawpers-angular/src/app/topic-page/topic-page.component.html
@@ -1,6 +1,8 @@
 <p>topic-page works!</p>
-
+<button class="btn btn-primary" (click)="addTopic()">Add Topic</button>
 <table class="table table hover">
+
+    
     <thead>
         <th>Topic</th>
         <th>Content</th>
