--- a/pawpers-angular/src/app/navbar/navbar.component.html
+++ b/pawpers-angular/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
             <a class="nav-link active" aria-current="page" [routerLink]="['/front-page']">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active"  aria-current="page"  [routerLink]="['/dog-search']">Find A Dog</a>
+            <a class="nav-link active"  aria-current="page"  [routerLink]="['/dogsearch-page']">Find A Dog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page"  [routerLink]="['/topic-page']">Discussion</a>
