--- a/pawpers-angular/src/app/dog-search/dog-search.component.html
+++ b/pawpers-angular/src/app/dog-search/dog-search.component.html
@@ -1,6 +1,9 @@
-<p>dog-search works!</p>
+<form #zipSearch="ngForm" (ngSubmit)="onClickSubmit(zipSearch.value)">
+    <input type="text" name="zipCode" placeholder="zip code" ngModel>
+    <button type="submit">Search</button> 
+</form>
 
-<table class="table table-responsive table-hover">
+<table *ngIf="show" class="table table-responsive table-hover">
     <thead>
         <th scope="col">photo</th>
         <th scope="col">id</th>
@@ -20,6 +23,8 @@
             <td>{{animal.name}}</td>
             <td>{{animal.age}}</td>
             <td>{{animal.status}}</td>
+
+            <button class="btn btn-primary" [routerLink]="['../dogview-page/' + animal.id]">View</button>
         </tr>
     </tbody>
 </table>
