Added Profile Addition Component

--- a/pawpers-angular/src/app/profile-page/profile-page.component.html
+++ b/pawpers-angular/src/app/profile-page/profile-page.component.html
@@ -2,6 +2,9 @@
 
 <div>
     <h5>Create a Profile</h5>
+    <button class="btn btn-primary" (click)="redirectToAddProfile()">Add Profile</button>
+    <br>
+    <br>
 </div>
 
 <div>
