--- a/pawpers-angular/src/app/dog-view/dog-view.component.html
+++ b/pawpers-angular/src/app/dog-view/dog-view.component.html
@@ -1,12 +1,93 @@
 <div>
     <h3>{{searchResult.animal.name}}</h3>
-    <img src={{searchResult.animal.photos[0].large}} alt="large doggo photo">
-    <dt>Breeds</dt>
-    <dd>{{searchResult.animal.breeds.primary}} {{searchResult.animal.breeds.secondary}}</dd>
-    <dt>Colors</dt>
-    <dd>{{searchResult.animal.colors.primary}} {{searchResult.animal.colors.secondary}}</dd>
+
+    <picture>
+        <img *ngIf="searchResult.animal.photos[0].large; else imgAlt" src={{searchResult.animal.photos[0].large}} alt="large doggo photo">
+        <ng-template #imgAlt>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Missing_dog_photo.png" alt="image not provided">
+        </ng-template>
+    </picture>
+    
     <dt>Age</dt>
-    <dd>{{searchResult.animal.age}}</dd>
+    <dd *ngIf="searchResult.animal.age; else ageAlt">{{searchResult.animal.age}}</dd>
+    <ng-template #ageAlt>
+        <dd>Not provided</dd>
+    </ng-template>
+
+    <dt>Gender</dt>
+    <dd *ngIf="searchResult.animal.gender; else genderAlt">{{searchResult.animal.gender}}</dd>
+    <ng-template #genderAlt>
+        <dd>Not provided</dd>
+    </ng-template>
+
+    <dt>Breeds</dt>
+    <dd *ngIf="searchResult.animal.breeds.primary; else breedAlt">{{searchResult.animal.breeds.primary}} {{searchResult.animal.breeds.secondary}}</dd>
+    <ng-template #breedAlt>
+        <dd>Not provided</dd>
+    </ng-template>
+    
+    <dt>Colors</dt>
+    <dd *ngIf="searchResult.animal.colors.primary; else colorAlt">{{searchResult.animal.colors.primary}} {{searchResult.animal.colors.secondary}}</dd>
+    <ng-template #colorAlt>
+        <dd>Not provided</dd>
+    </ng-template>
+
+    <dt>Coat</dt>
+    <dd *ngIf="searchResult.animal.coat; else coatAlt">{{searchResult.animal.coat}}</dd>
+    <ng-template #coatAlt>
+        <dd>Not provided</dd>
+    </ng-template>
+
+    <dt>Size</dt>
+    <dd *ngIf="searchResult.animal.size; else sizeAlt">{{searchResult.animal.size}}</dd>
+    <ng-template #sizeAlt>
+        <dd>Not provided</dd>
+    </ng-template>
+
     <dt>Description</dt>
-    <dd>{{searchResult.animal.description}}</dd>
+    <dd *ngIf="searchResult.animal.description; else descriptionAlt">{{searchResult.animal.description}}</dd>
+    <ng-template #descriptionAlt>
+        <dd>Not provided</dd>
+    </ng-template>
+
+    <div>
+        <h4>Attributes</h4>
+        <ul>
+            <li *ngIf="searchResult.animal.attributes.house_trained">House Trained</li>
+            <li *ngIf="searchResult.animal.attributes.shots_current">Shots Current</li>
+            <li *ngIf="searchResult.animal.attributes.spayed_neutered">Nuetered/Spayed</li>
+            <li *ngIf="searchResult.animal.attributes.special_needs">Special Needs</li>
+        </ul>
+    </div>
+
+    <div>
+        <h4>Ideal Environment</h4>
+        <ul>
+            <li *ngIf="searchResult.animal.environment.children">Child Friendly</li>
+            <li *ngIf="searchResult.animal.environment.cats">Cat Friendly</li>
+            <li *ngIf="searchResult.animal.environment.dogs">Dog Friendly</li>
+        </ul>
+    </div>
+
+    <div>
+        <h4>Tags</h4>
+        <ul *ngFor="let tag of searchResult.animal.tags">
+            <li>{{tag}}</li>
+        </ul>
+    </div>
+
+    <div>
+        <h4>Shelter Info</h4>
+        <ul>
+            <li *ngIf="searchResult.animal.contact.address">
+                {{searchResult.animal.contact.address.address1}} {{searchResult.animal.contact.address.address2}} <br />
+                {{searchResult.animal.contact.address.city}}, {{searchResult.animal.contact.address.state}} {{searchResult.animal.contact.address.postcode}}
+            </li>
+            <li *ngIf="searchResult.animal.contact.email">{{searchResult.animal.contact.email}}</li>
+            <li *ngIf="searchResult.animal.contact.phone">{{searchResult.animal.contact.phone}}</li>
+            <li *ngIf="searchResult.animal._links.organization">
+                <a href={{searchResult.animal.url}}>{{searchResult.animal.url}}</a>
+            </li>
+        </ul>
+    </div>
 </div>
