--- a/pawpers-angular/src/app/reply-page/reply-page.component.html
+++ b/pawpers-angular/src/app/reply-page/reply-page.component.html
@@ -1,16 +1,12 @@
 
 
-<table *ngIf= "show" class="table table hover">
-    <thead>
-        <th>ReplyMessage</th>
-        <th>ReplyTimeStamp</th>
-    </thead>
-
-    <tbody>
-        <tr *ngFor="let reply of listOfReplies">
-            <td>{{reply.replyMessage}}</td>
-            <td>{{reply.replyTimestamp}}</td>
-        </tr>
-    </tbody>
-</table>
+<div *ngIf="topic">
+    <h2>{{topic.topicName}}</h2>
+    <div>{{topic.topicBody}}</div>
+    <div *ngFor="let reply of topic.replies.$values">
+        <div>
+            <h3>{{reply.$ref}}</h3>
+        </div>
+    </div>
+</div>
 
