--- a/pawpers-angular/src/app/reply-page/reply-page.component.html
+++ b/pawpers-angular/src/app/reply-page/reply-page.component.html
@@ -1,7 +1,7 @@
 <div>
     <div class="card">
     <h2>{{topic.topicName}}</h2>
-    <p>{{topic.profile.profileName}}</p>
+    <p>{{topic.profileId}}</p>
     <p>{{topic.postTimestamp}}</p>
     <p>{{topic.topicBody}}</p>
     </div>
