--- a/pawpers-angular/src/app/navbar/navbar.component.html
+++ b/pawpers-angular/src/app/navbar/navbar.component.html
@@ -14,6 +14,9 @@
             <a class="nav-link active"  aria-current="page"  [routerLink]="['/dogsearch-page']">Find A Dog</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active"  aria-current="page"  [routerLink]="['/sheltersearch-page']">Find A Shelter</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page"  [routerLink]="['/topic-page']">Discussion</a>
           </li>
           <li *ngIf="auth0.isAuthenticated$ | async" class="nav-item">
