--- a/pawpers-angular/src/app/add-reply/add-reply.component.html
+++ b/pawpers-angular/src/app/add-reply/add-reply.component.html
@@ -1,3 +1,17 @@
 <p>add-reply works!</p>
 
+<h1 > Create a Reply </h1>
+<br>
 
+<form [formGroup] = "replyGroup">
+    <h4>Reply Message</h4>
+    <textarea formControlName = "replyMessage"
+              style="overflow:auto;resize:none" 
+              rows="13" cols="200"
+              placeholder="Enter text here...">
+    </textarea>
+    <p>250 character limit</p>
+    <!-- <input type="submit" value="Submit"> -->
+    <!-- <br> -->
+    <button class="btn btn-primary" (click)="createReply(replyGroup)">Submit</button>
+</form>
