--- a/pawpers-angular/src/app/reply-page/reply-page.component.html
+++ b/pawpers-angular/src/app/reply-page/reply-page.component.html
@@ -1,3 +1,8 @@
+<br>
+<button class="btn btn-primary" (click)="redirectToAddReply()">Add Reply</button>
+<br>
+<br>
+
 <div>
     <div class="card">
     <h2>{{topic.topicName}}</h2>
