--- a/pawpers-angular/src/app/reply-page/reply-page.component.html
+++ b/pawpers-angular/src/app/reply-page/reply-page.component.html
@@ -1,8 +1,3 @@
-<br>
-<button class="btn btn-primary" (click)="redirectToAddReply()">Add Reply</button>
-<br>
-<br>
-
 <div>
     <div class="card">
     <h2>{{topic.topicName}}</h2>
@@ -13,5 +8,9 @@
     <div class="card" *ngFor="let reply of topic.replies.$values">
         <p>{{reply.profile.profileName}} | {{reply.replyTimestamp}}</p>
         <p>{{reply.replyMessage}}</p>
+    </div>
+    <div>
+        <button (click)="showOnClick()" class="btn btn-primary">Add Reply</button>
+        <app-add-reply *ngIf="show"></app-add-reply>
     </div>
 </div>
