dog img responsive now and in our assests

--- a/pawpers-angular/src/app/front-page/front-page.component.html
+++ b/pawpers-angular/src/app/front-page/front-page.component.html
@@ -4,7 +4,11 @@
     <h6>Welcome to the quick and easy way for rescue dog adoptions!</h6>
 </div>
 
-<div class="center" style="height: 800px; padding-bottom: 150px;">
+<!-- This is how we had it as a background image -->
+<!-- <div class="center" style="height: 800px; padding-bottom: 150px;"></div> -->
 
-</div>
+<!-- This is the image being responsive with the source as a URL -->
+<!-- <img src="https://images.pexels.com/photos/406014/pexels-photo-406014.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Dog" class="responsive"> -->
 
+<!-- This is the image being responsive with the source as a jpeg in our assests folder -->
+<img src="../../assets/images/doggo.jpeg" alt="Dog" class="responsive">
