--- a/pawpers-angular/src/app/front-page/front-page.component.css
+++ b/pawpers-angular/src/app/front-page/front-page.component.css
@@ -8,15 +8,18 @@
     height: auto;
 }
 
+.background {
+    width: 100%;
+    height: 100vh;
+    background: url('../../assets/images/doggo.jpeg') no-repeat;
+    background-size: cover;
+    text-align: center;
+ }
 
 .center {
-   
-    
     background-image:url(https://images.pexels.com/photos/406014/pexels-photo-406014.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
     background-attachment: fixed;
     background-repeat: no-repeat;
-    
-    
 }
 
 .indent{
