--- a/pawpers-angular/src/app/navbar/navbar.component.html
+++ b/pawpers-angular/src/app/navbar/navbar.component.html
@@ -1,41 +1,41 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarToggler">
-      <a class="navbar-brand" href="#">Pawpers</a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" [routerLink]="['/front-page']">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active"  aria-current="page"  [routerLink]="['/dogsearch-page']">Find A Dog</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active"  aria-current="page"  [routerLink]="['/sheltersearch-page']">Find A Shelter</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page"  [routerLink]="['/topic-page']">Discussion</a>
-          </li>
-          <li *ngIf="auth0.isAuthenticated$ | async" class="nav-item">
-            <a class="nav-link active" aria-current="page" [routerLink]="['/profile-page']">Profile Page</a>
-          </li>
-          <li *ngIf="auth0.isAuthenticated$ | async" class="nav-item">
-            <a class="nav-link active" aria-current="page" [routerLink]="['/favorites-page']">Favorites</a>
-          </li>
-          
-        </ul>
-      </div>
-      <li class= "nav-item me-2">
-        <app-auth-button></app-auth-button>
-      </li>
-      
-    <!--    <form class="d-flex">
+        <div class="collapse navbar-collapse" id="navbarToggler">
+            <a class="navbar-brand" href="#">Pawpers</a>
+            <div class="" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" [routerLink]="['/front-page']">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" [routerLink]="['/dogsearch-page']">Find A Dog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" [routerLink]="['/sheltersearch-page']">Find A Shelter</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" [routerLink]="['/topic-page']">Discussion</a>
+                    </li>
+                    <li *ngIf="auth0.isAuthenticated$ | async" class="nav-item">
+                        <a class="nav-link active" aria-current="page" [routerLink]="['/profile-page']">Profile Page</a>
+                    </li>
+                    <li *ngIf="auth0.isAuthenticated$ | async" class="nav-item">
+                        <a class="nav-link active" aria-current="page" [routerLink]="['/favorites-page']">Favorites</a>
+                    </li>
+
+                </ul>
+            </div>
+            <li class="nav-item me-2">
+                <app-auth-button></app-auth-button>
+            </li>
+
+            <!--    <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>  -->
+        </div>
     </div>
-  </div>
 </nav>
