--- a/pawpers-angular/src/app/addfavorite-button/addfavorite-button.component.html
+++ b/pawpers-angular/src/app/addfavorite-button/addfavorite-button.component.html
@@ -1,4 +1,7 @@
-<button type="submit" *ngIf="show; else favorite" (click)="addDogToFavorite()">Favorite</button>
-<ng-template #favorite>
-    <img height="64px" width="64px" src="https://upload.wikimedia.org/wikipedia/commons/6/68/Crystal_Clear_filesystem_folder_favorites.png" alt="favorite">
-</ng-template>
+<div class="container">
+    <button class="btn btn-outline-secondary" type="submit" *ngIf="show; else favorite" (click)="addDogToFavorite()">Favorite</button>
+    <br>
+    <ng-template #favorite>
+        <img height="64px" width="64px" src="https://upload.wikimedia.org/wikipedia/commons/6/68/Crystal_Clear_filesystem_folder_favorites.png" alt="favorite">
+    </ng-template>
+</div>
