--- a/pawpers-angular/src/app/addtopic/addtopic.component.html
+++ b/pawpers-angular/src/app/addtopic/addtopic.component.html
@@ -1,21 +1,20 @@
-<h1> Add a topic</h1>
+<h1 class="text-center">Add a topic</h1>
 
-<form [formGroup] = topicGroup>
-    <label for="category">Category</label>
-    <select name="category" formControlName ="categoryId">
+<div class="container">
+    <form class="form-group" [formGroup]=topicGroup>
+        <label for="category">Category</label>
+        <select class="form-control" name="category" formControlName="categoryId">
         <option value="1">General</option>
     </select>
-    <br/>
+        <br/>
 
-    <label for="topicName">Topic Name</label>
-    <input name="topicName" formControlName = "topicName">
-    <br>
-    <label for="topicBody">Topic Message</label>
-    <textarea name="topicBody" formControlName = "topicBody"
-              style="overflow:auto;resize:none" 
-              rows="13" cols="200"
-              placeholder="Enter text here...">
+        <label for="topicName">Topic Name</label>
+        <input class="form-control" name="topicName" formControlName="topicName">
+        <br>
+        <label for="topicBody">Topic Message</label>
+        <textarea class="form-control" name="topicBody" formControlName="topicBody" style="overflow:auto;resize:none" rows="13" cols="200" placeholder="Enter text here...">
     </textarea>
-    <br>
-    <button class="btn btn-primary" (click)="addTopic(topicGroup)">Submit</button>
-</form>
+        <br>
+        <button class="btn btn-primary " (click)="addTopic(topicGroup)">Submit</button>
+    </form>
+</div>
