--- a/pawpers-angular/src/app/dog-search/dog-search.component.html
+++ b/pawpers-angular/src/app/dog-search/dog-search.component.html
@@ -1,37 +1,52 @@
-<form #zipSearch="ngForm" (ngSubmit)="onClickSubmit(zipSearch.value)">
-    <input type="text" name="zipCode" placeholder="zip code" ngModel>
-    <button type="submit">Search</button>
-</form>
+<div class="container col-md-8">
+    <div class="d-flex justify-content-evenly">
+        <form #zipSearch="ngForm" (ngSubmit)="onClickSubmit(zipSearch.value)">
+            <div class="input-group mb-2">
+                <input type="text" class="form-control" name="zipCode" placeholder="zip code" ngModel aria-label="Zip Code Search" aria-describedby="basic-addon2">
+                <div class="input-group-append">
+                    <button type="submit" class="btn btn-outline-secondary">Search</button>
+                </div>
+            </div>
+        </form>
 
-<form #breedSearch="ngForm" (ngSubmit)="breedSearchOnClick(breedSearch.value)">
-    <input type="text" name="breedSearch" placeholder="Search By Breed" ngModel>
-    <button type="submit">Search</button>
-</form>
 
-<table *ngIf="show" class="table table-responsive table-hover">
-    <thead>
-        <th scope="col">Photo</th>
-        <th scope="col">Name</th>
-        <th scope="col">Age</th>
-        <th scope="col">Breed</th>
-        <th scope="col">Status</th>
-        <th scope="col">Location</th>
-    </thead>
-    <tbody>
-        <tr *ngFor="let animal of searchResults.animals">
-            <td>
-                <img *ngIf="animal.photos[0]; else altImg" src={{animal.photos[0].small}} alt="doggo photo">
-                <ng-template #altImg>
-                    <img height="100px" width="100px" src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Missing_dog_photo.png" alt="missing image">
-                </ng-template>
-            </td>
-            <td>{{animal.name}}</td>
-            <td>{{animal.age}}</td>
-            <td>{{animal.breeds.primary}}</td>
-            <td>{{animal.status}}</td>
-            <td>{{animal.contact.address.city}}, {{animal.contact.address.postcode}}</td>
+        <form #breedSearch="ngForm" (ngSubmit)="breedSearchOnClick(breedSearch.value)">
+            <div class="input-group mb-2">
+                <input type="text" class="form-control" name="breedSearch" placeholder="Search By Breed" ngModel aria-label="Breed Search" aria-describedby="basic-addon2">
+                <div class="input-group-append">
+                    <button type="submit" class="btn btn-outline-secondary">Search</button>
+                </div>
+            </div>
+        </form>
+    </div>
 
-            <button class="btn btn-primary" [routerLink]="['../dogview-page/' + animal.id]">View</button>
-        </tr>
-    </tbody>
-</table>
+    <div class="container justify-content-evenly">
+        <table class="" *ngIf="show" class="table table-hover">
+            <thead>
+                <th scope="col">Photo</th>
+                <th scope="col">Name</th>
+                <th scope="col">Age</th>
+                <th scope="col">Breed</th>
+                <th scope="col">Status</th>
+                <th scope="col">Location</th>
+            </thead>
+            <tbody>
+                <tr *ngFor="let animal of searchResults.animals">
+                    <td>
+                        <img *ngIf="animal.photos[0]; else altImg" src={{animal.photos[0].small}} alt="doggo photo">
+                        <ng-template #altImg>
+                            <img height="100px" width="100px" src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Missing_dog_photo.png" alt="missing image">
+                        </ng-template>
+                    </td>
+                    <td>{{animal.name}}</td>
+                    <td>{{animal.age}}</td>
+                    <td>{{animal.breeds.primary}}</td>
+                    <td>{{animal.status}}</td>
+                    <td>{{animal.contact.address.city}}, {{animal.contact.address.postcode}}</td>
+
+                    <button class="btn btn-outline-secondary" [routerLink]="['../dogview-page/' + animal.id]">View</button>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
