--- a/pawpers-angular/src/app/profile-page/profile-page.component.html
+++ b/pawpers-angular/src/app/profile-page/profile-page.component.html
@@ -1,80 +1,82 @@
-<div *ngIf="!profileExists">
-    <h5>Create a Profile</h5>
-    <button class="btn btn-primary" (click)="redirectToAddProfile()">Add Profile</button>
-    <br>
-    <br>
-</div>
+<div class="container">
+    <div *ngIf="!profileExists">
+        <h5>Create a Profile</h5>
+        <button class="btn btn-primary" (click)="redirectToAddProfile()">Add Profile</button>
+        <br>
+        <br>
+    </div>
 
-<div class="card card-responsive" *ngIf="profileExists">
-    <h3>Favorites</h3>
-    <app-favorites-page [profileId]="profileId"></app-favorites-page>
-</div>
+    <div class="card card-responsive" *ngIf="profileExists">
+        <h3>Favorites</h3>
+        <app-favorites-page [profileId]="profileId"></app-favorites-page>
+    </div>
 
-<div>
-    <button onClick="window.print()">Print Profile</button>
-</div>
-<div>
-    <app-profile-email [profile]="profile" [hasChildren]="hasChildren" [hasYard]="hasYard" [dwellingType]="dwellingType" [familyAllergies]="familyAllergies"></app-profile-email>
-</div>
-<div class="card card-responsive printDiv" *ngIf="profileExists">
-    <dt>Name</dt>
-    <dd>{{profile.profileName}}</dd>
-    <dt>Address</dt>
-    <dd>{{profile.profileStreetaddress}}<br /> {{profile.profileCity}}, {{state}} {{profile.profileZipcode}}
-    </dd>
-    <dt>Age</dt>
-    <dd>{{profile.profileAge}}</dd>
-    <dt>Home Phone</dt>
-    <dd>{{profile.profileHomephone}}</dd>
-    <dt>Personal Phone</dt>
-    <dd>{{profile.profilePersonalphone}}</dd>
-    <dt>Email</dt>
-    <dd>{{profile.profileEmail}}</dd>
-    <dt>Occupation</dt>
-    <dd>{{profile.profileOccupation}}</dd>
-    <dt>Spouse</dt>
-    <dd>{{profile.profileSpousename}}</dd>
-    <dt>Children</dt>
-    <dd>{{hasChildren}}</dd>
-    <dt>Dwelling Type</dt>
-    <dd>{{dwellingType}}</dd>
-    <dt>Yard</dt>
-    <dd>{{hasYard}}</dd>
-    <dt *ngIf="profile.profileLandlordname != null">Landlord Name</dt>
-    <dd *ngIf="profile.profileLandlordname != null">{{profile.profileLandlordname}}</dd>
-    <dt *ngIf="profile.profileLandlordphone != null">Landlord Phone</dt>
-    <dd *ngIf="profile.profileLandlordphone != null">{{profile.profileLandlordphone}}</dd>
-    <dt *ngIf="profile.profileOtherpetname != null">Other Pet Name</dt>
-    <dd *ngIf="profile.profileOtherpetname != null">{{profile.profileOtherpetname}}</dd>
-    <dt *ngIf="profile.profileOtherpetbreed != null">Other pet breed</dt>
-    <dd *ngIf="profile.profileOtherpetbreed != null">{{profile.profileOtherpetbreed}}</dd>
-    <dt *ngIf="profile.profileOtherpetsex != null">Other Pet Gender</dt>
-    <dd *ngIf="profile.profileOtherpetsex != null">{{profile.profileOtherpetsex}}</dd>
-    <dt>Known Family Animal Allergies</dt>
-    <dd>{{familyAllergies}}</dd>
-    <dt>Primary Caregiver</dt>
-    <dd>{{profile.profileResponsiblefordog}}</dd>
-    <dt>Adoption Reason</dt>
-    <dd>{{profile.profileAdoptionreason}}</dd>
-    <dt>Where Will The Dog Sleep</dt>
-    <dd>{{profile.profileDogsleepat}}</dd>
-    <dt>What will you do if the dog is aggressive towards humans or other animals</dt>
-    <dd>{{profile.profileDogaggresive}}</dd>
-    <dt>What will you do if the dog gets sick and needs medication?</dt>
-    <dd>{{profile.profileMedfordog}}</dd>
-    <dt>What will you do if you are unable to care for the dog?</dt>
-    <dd>{{profile.profileNocaredog}}</dd>
-</div>
+    <div>
+        <button onClick="window.print()">Print Profile</button>
+    </div>
+    <div>
+        <app-profile-email [profile]="profile" [hasChildren]="hasChildren" [hasYard]="hasYard" [dwellingType]="dwellingType" [familyAllergies]="familyAllergies"></app-profile-email>
+    </div>
+    <div class="card card-responsive printDiv" *ngIf="profileExists">
+        <dt>Name</dt>
+        <dd>{{profile.profileName}}</dd>
+        <dt>Address</dt>
+        <dd>{{profile.profileStreetaddress}}<br /> {{profile.profileCity}}, {{state}} {{profile.profileZipcode}}
+        </dd>
+        <dt>Age</dt>
+        <dd>{{profile.profileAge}}</dd>
+        <dt>Home Phone</dt>
+        <dd>{{profile.profileHomephone}}</dd>
+        <dt>Personal Phone</dt>
+        <dd>{{profile.profilePersonalphone}}</dd>
+        <dt>Email</dt>
+        <dd>{{profile.profileEmail}}</dd>
+        <dt>Occupation</dt>
+        <dd>{{profile.profileOccupation}}</dd>
+        <dt>Spouse</dt>
+        <dd>{{profile.profileSpousename}}</dd>
+        <dt>Children</dt>
+        <dd>{{hasChildren}}</dd>
+        <dt>Dwelling Type</dt>
+        <dd>{{dwellingType}}</dd>
+        <dt>Yard</dt>
+        <dd>{{hasYard}}</dd>
+        <dt *ngIf="profile.profileLandlordname != null">Landlord Name</dt>
+        <dd *ngIf="profile.profileLandlordname != null">{{profile.profileLandlordname}}</dd>
+        <dt *ngIf="profile.profileLandlordphone != null">Landlord Phone</dt>
+        <dd *ngIf="profile.profileLandlordphone != null">{{profile.profileLandlordphone}}</dd>
+        <dt *ngIf="profile.profileOtherpetname != null">Other Pet Name</dt>
+        <dd *ngIf="profile.profileOtherpetname != null">{{profile.profileOtherpetname}}</dd>
+        <dt *ngIf="profile.profileOtherpetbreed != null">Other pet breed</dt>
+        <dd *ngIf="profile.profileOtherpetbreed != null">{{profile.profileOtherpetbreed}}</dd>
+        <dt *ngIf="profile.profileOtherpetsex != null">Other Pet Gender</dt>
+        <dd *ngIf="profile.profileOtherpetsex != null">{{profile.profileOtherpetsex}}</dd>
+        <dt>Known Family Animal Allergies</dt>
+        <dd>{{familyAllergies}}</dd>
+        <dt>Primary Caregiver</dt>
+        <dd>{{profile.profileResponsiblefordog}}</dd>
+        <dt>Adoption Reason</dt>
+        <dd>{{profile.profileAdoptionreason}}</dd>
+        <dt>Where Will The Dog Sleep</dt>
+        <dd>{{profile.profileDogsleepat}}</dd>
+        <dt>What will you do if the dog is aggressive towards humans or other animals</dt>
+        <dd>{{profile.profileDogaggresive}}</dd>
+        <dt>What will you do if the dog gets sick and needs medication?</dt>
+        <dd>{{profile.profileMedfordog}}</dd>
+        <dt>What will you do if you are unable to care for the dog?</dt>
+        <dd>{{profile.profileNocaredog}}</dd>
+    </div>
 
-<div *ngFor="let rec of recommended">
-    <div class="card card-responsive">
-        <h4>
-            {{rec.name}}
-            <button class="btn btn-primary" [routerLink]="['../dogview-page/' + rec.id]">View</button>
-        </h4>
-        <img *ngIf="rec.photos[0]; else altImg" height="150px" width="150px" src={{rec.photos[0].small}} alt="doggo photo">
-        <ng-template #altImg>
-            <img height="100px" width="100px" src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Missing_dog_photo.png" alt="missing image">
-        </ng-template>
+    <div *ngFor="let rec of recommended">
+        <div class="card card-responsive">
+            <h4>
+                {{rec.name}}
+                <button class="btn btn-primary" [routerLink]="['../dogview-page/' + rec.id]">View</button>
+            </h4>
+            <img *ngIf="rec.photos[0]; else altImg" height="150px" width="150px" src={{rec.photos[0].small}} alt="doggo photo">
+            <ng-template #altImg>
+                <img height="100px" width="100px" src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Missing_dog_photo.png" alt="missing image">
+            </ng-template>
+        </div>
     </div>
 </div>
