Shelter Search table corrected

--- a/pawpers-angular/src/app/shelter-search/shelter-search.component.html
+++ b/pawpers-angular/src/app/shelter-search/shelter-search.component.html
@@ -4,6 +4,7 @@
     <button type="submit">Search</button> 
 </form>
 
+<div class="container justify-content-evenly">
 <table *ngIf="show" class="table table-responsive table-hover">
     <thead>
         <th scope="col">Name</th>
@@ -28,3 +29,4 @@
             </tr>
     </tbody>
 </table>
+</div>
