--- a/pawpers-angular/src/app/dog-search/dog-search.component.html
+++ b/pawpers-angular/src/app/dog-search/dog-search.component.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="container justify-content-evenly">
-        <table class="" *ngIf="show" class="table table-hover">
+        <table class="" *ngIf="show" class="table table-striped table-hover">
             <thead>
                 <th scope="col">Photo</th>
                 <th scope="col">Name</th>
