--- a/pawpers-angular/src/app/favorites-page/favorites-page.component.html
+++ b/pawpers-angular/src/app/favorites-page/favorites-page.component.html
@@ -1,7 +1,11 @@
-<div class="container">
-    <div class="card" *ngFor="let favorite of favorites">
-        <!--<h2>{{profile.profileName}}</h2>-->
-        <p>{{favorite.name}}</p>
-        <img height="150px" width="150px" src="{{favorite.photos[0].small}}" alt="doggo image">
+<div class="container px-4 py-5" id="custom-cards">
+    <div class="row row-cols-1 row-cols-md-2 align-items-stretch g-4 py-5">
+        <div class="col" *ngFor="let favorite of favorites">
+            <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('{{favorite.photos[0].small}}'); background-size:cover; background-repeat: no-repeat;">
+                <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                    <h5 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold"><a href="../dogview-page/{{favorite.dogId}}">{{favorite.name}}</a></h5>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
