--- a/pawpers-angular/src/app/add-profile/add-profile.component.css
+++ b/pawpers-angular/src/app/add-profile/add-profile.component.css
@@ -2,3 +2,13 @@
     padding-top: 50px;
     padding-left: 80px;
 }
+
+.center {
+    text-align: center;
+}
+
+.error {
+    text-align: center;
+    color: red;
+    /* text-emphasis-color: red; */
+}
